# bootcamp

./: .gitignore  README.md  pyproject.toml
apiclient/: affirmations.py  bored.py  dogs.py  weather.py
edabit/01_stutters/: stutters.py  test_stutters.py
edabit/07_factorial/: factorial.py  test_factorial.py
edabit/08_mood_today/: mood_today.py  test_mood_today.py
edabit/09_base_2/: base_2.py  test_base_2.py
edabit/10_weight/: test_weight.py  weight.py
edabit/11_time_for_milk_and_cookies/: test_time_for_milk_and_cookies.py  time_for_milk_and_cookies.py
edabit/12_count_ones/: count_ones.py  test_count_ones.py
edabit/13_count_vowels/: count_vowels.py  test_count_vowels.py
edabit/addition/: addition.py
edabit/calculator/: calculator.py
edabit/curzon/: curzon.py  test_curzon.py
edabit/discount/: discount.py  test_discount.py
edabit/luke/: luke.py
flask/api/hackerrank/: app.py  protected.py  user.py
hackerrank/challenges/a_very_big_sum/: a_very_big_sum.py  test_a_very_big_sum.py
hackerrank/challenges/angry_professor/: angry_professor.py  test_angry_professor.py
hackerrank/challenges/apple_and_orange/: apple_and_orange.py  test_apple_and_orange.py
hackerrank/challenges/beautiful_days_at_the_movies/: beautiful_days.py  test_beautiful_days.py
hackerrank/challenges/between_two_sets/: get_total_x.py  test_get_total_x.py
hackerrank/challenges/birthday_cake_candles/: birthday_cake_candles.py  test_birthday_cake_candles.py
hackerrank/quiz/: is_prime.py
notes/decorator/: hello.py  stringmanipulations.py
(+74 files in other folders)
