[tool.poetry]
name = "bootcamp"
version = "0.1.0"
description = "Bootcamp coding excercises"
authors = ["Dimas Ahmad Eka Putra <dimasahmad@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.2"
requests = "^2.26.0"
python-dotenv = "^0.19.1"

[tool.poetry.dev-dependencies]
yapf = "^0.31.0"
pytest = "^6.2.5"
pytest-benchmark = "^3.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
